--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ShiraoriBOT-Md",
-    "version": "0.0.1",
+    "version": "0.4.5",
     "description": "Simle Bot WhatsApp with Baileys Multi Device",
     "depecrated": false,
     "main": "index.js",
@@ -39,9 +39,11 @@
         "@adiwajshing/baileys-md": "github:ilmanhdyt/baileys#multi-device",
         "awesome-phonenumber": "^2.64.0",
         "axios": "^0.24.0",
+        "@bochilteam/scraper": "^0.0.2",
         "cfonts": "^2.10.0",
         "chalk": "^4.1.2",
         "cheerio": "^1.0.0-rc.10",
+        "colors": "1.4.0",
         "file-type": "^16.5.3",
         "form-data": "^4.0.0",
         "g-i-s": "^2.1.6",
@@ -57,7 +59,8 @@
         "nodemon": "^2.0.15",
         "os": "^0.1.2",
         "perf_hooks": "^0.0.1",
-        
+        "qrcode": "^1.5.0",
+        "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
         "similarity": "^1.2.1",
         "syntax-error": "^1.4.0",
